[gd_scene load_steps=10 format=2]

[ext_resource path="res://actors/animals/BaseAnimal.gd" type="Script" id=1]
[ext_resource path="res://interface/gui/GUI.tscn" type="PackedScene" id=2]

[sub_resource type="ConvexPolygonShape" id=1]

points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[sub_resource type="CubeMesh" id=2]


[sub_resource type="SphereShape" id=3]


[sub_resource type="SphereMesh" id=4]


[sub_resource type="CylinderShape" id=5]

radius = 5.0
height = 5.0

[sub_resource type="CylinderShape" id=6]

radius = 10.0363

[sub_resource type="BoxShape" id=7]

extents = Vector3( 1, 0.700584, 1.68185 )

[node name="BaseAnimal" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 7.23, 39 )
script = ExtResource( 1 )
max_hp = 0.0
gravity = 0.0
move_speed = 0.0
run_speed = 0.0
description = ""
sense_of_presence_radius = 0.0
attack_on_sight = false
weak_spot_hit_multiplier = 0.0

[node name="GUI" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 1.5, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 1.5, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="WeakSpot" type="Area" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5384, -1.17074 )

[node name="CollisionShape" type="CollisionShape" parent="WeakSpot"]
shape = SubResource( 3 )

[node name="MeshInstance2" type="MeshInstance" parent="WeakSpot"]
transform = Transform( 1, 0, 0, 0, 0.850642, 0, 0, 0, 0.877925, 0, 0.00859976, -0.0862579 )
mesh = SubResource( 4 )
material/0 = null

[node name="PresenseArea" type="Area" parent="."]
editor/display_folded = true

[node name="CollisionShape" type="CollisionShape" parent="PresenseArea"]
shape = SubResource( 5 )

[node name="RayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -2, 0 )

[node name="Sight" type="Area" parent="."]
editor/display_folded = true

[node name="CollisionShape" type="CollisionShape" parent="Sight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10 )
shape = SubResource( 6 )

[node name="BodyHitBox" type="Area" parent="."]
editor/display_folded = true

[node name="CollisionShape" type="CollisionShape" parent="BodyHitBox"]
shape = SubResource( 7 )

